[package]
name = "client"
version = "0.1.0"
authors = ["kevin <me@kvnvelasco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
librsync-ffi = { path = "/media/kevin/Data/Projects/librsync-rust"}
tokio = { version = "0.2.16", features = ['rt-core', 'macros', 'rt-threaded']}
notify = "4.0.15"
walkdir = "2.3.1"